[package]
name = "tak-bench"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["TAK Bench contributors"]
repository = "https://github.com/valmojr/tak_bench"
homepage = "https://github.com/valmojr/tak_bench"
readme = "README.md"
description = "Authorized, server-neutral TAK/CoT transport benchmark harness"
publish = ["crates-io"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hdrhistogram = "7.5"
quick-xml = "0.41"
rand = "0.9"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "serde-human-readable"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync", "time"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.12", features = ["v4", "serde"] }

[dev-dependencies]
rcgen = "0.13"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync", "time", "test-util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
