[package]
name = "tak-bench-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "tak-bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_yaml.workspace = true
tak-bench-core = { path = "../tak-bench-core" }
tak-bench-report = { path = "../tak-bench-report" }
tak-bench-scenarios = { path = "../tak-bench-scenarios" }
time.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
