[package]
name = "tak-bench-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Authorized, server-neutral TAK/CoT transport benchmark CLI"

[[bin]]
name = "tak-bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_yaml.workspace = true
tak-bench-core = { version = "0.1.0", path = "../tak-bench-core" }
tak-bench-report = { version = "0.1.0", path = "../tak-bench-report" }
tak-bench-scenarios = { version = "0.1.0", path = "../tak-bench-scenarios" }
time.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
