[package]
name = "tak-bench-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
hdrhistogram.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true

[lints]
workspace = true
