[package]
name = "tak-bench-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "CoT XML generation and conservative stream framing for TAK Bench"
publish = ["crates-io"]

[dependencies]
quick-xml.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[lints]
workspace = true
