[package]
name = "tak-bench-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tak-bench-core = { path = "../tak-bench-core" }
time = { workspace = true, features = ["formatting"] }

[lints]
workspace = true
