[package]
name = "tak-bench-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Sanitized terminal and JSON reports for TAK Bench"
publish = ["crates-io"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tak-bench-core = { version = "0.1.0", path = "../tak-bench-core" }
tak-bench-scenarios = { version = "0.1.0", path = "../tak-bench-scenarios" }
time = { workspace = true, features = ["formatting"] }

[lints]
workspace = true
