[package]
name = "tak-bench-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Reusable execution lifecycle for server-neutral TAK Bench workloads"
publish = false

[dependencies]
anyhow.workspace = true
tak-bench-core = { version = "0.1.0", path = "../tak-bench-core" }
tak-bench-report = { version = "0.1.0", path = "../tak-bench-report" }
tak-bench-scenarios = { version = "0.1.0", path = "../tak-bench-scenarios" }
time.workspace = true
tokio.workspace = true

[lints]
workspace = true
