[package]
name = "tak-bench-scenarios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
time.workspace = true
uuid.workspace = true
tak-bench-core = { path = "../tak-bench-core" }
tak-bench-protocol = { path = "../tak-bench-protocol" }
tokio.workspace = true

[lints]
workspace = true
