[package]
name = "tak-bench-scenarios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Server-neutral workload scenarios for TAK Bench"

[dependencies]
anyhow.workspace = true
rand.workspace = true
serde.workspace = true
time.workspace = true
uuid.workspace = true
tak-bench-core = { version = "0.1.0", path = "../tak-bench-core" }
tak-bench-protocol = { version = "0.1.0", path = "../tak-bench-protocol" }
tokio.workspace = true

[dev-dependencies]
rcgen = "0.13"
rustls.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-rustls.workspace = true

[lints]
workspace = true
