[package]
name = "tak-bench-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Loopback fixture and provisioning test support for TAK Bench"
publish = false

[dependencies]
tokio.workspace = true
tak-bench-core = { version = "0.1.0", path = "../tak-bench-core" }

[lints]
workspace = true
